Fleshing out README.

--- a/README
+++ b/README
@@ -14,10 +14,9 @@ Shapefile is designed to be rendering method agnostic as it exposes the
 vertices as lat/lon points that may then be transformed to the desired
 projection.
 
-The examples directory contains examples of two dimensional and three
-dimensional rendering. Lives examples can be found at
-http://tlahoda.org/render2d.html for a two dimensional representation of
-a shapefile.
+A live two dimensional example representation of a shapefile can be found
+at http://tlahoda.org/render2d.html for a two dimensional representation
+of a shapefile.
 
 A three dimensional WebGL example is located at http://tlahoda.org . Be
 forewarned this demo may take a long time to load (as in a miute or so)
