--- a/README
+++ b/README
@@ -8,17 +8,18 @@ Shapefile makes ESRI shapefiles available in Javascript. Currently all
 shape types other than MultiPatch have been implemented. MultiPatch is a 
 complex shape that will require some thought. Further only Polygon has
 been tested as I only have Polygon shapefiles at the moment and have not
-taken the time to mock up sample data.
+taken the time to mock up sample data, although I am fairly confident
+the code matches the documentation precisely.
 
-Shapefile is designed to be rendering method agnostic as it exposes the
-vertices as lat/lon points that may then be transformed to the desired
-projection.
+Shapefile is designed to be rendering method agnostic and accomplishes
+this by exposing the vertices as lat/lon points that may then be
+transformed to the desired projection.
 
-A live two dimensional example representation of a shapefile can be found
-at http://tlahoda.org/render2d.html A three dimensional WebGL example can
-be found at http://tlahoda.org . Be forewarned this demo may take a long
-time to load (as in a miute or so) on some browsers (namely firefox). It
-is best viewed in Google Chrome.
+A live two dimensional orthographic projection example can be found at
+http://tlahoda.org/render2d.html A three dimensional WebGL example can be
+found at http://tlahoda.org . Be forewarned this demo may take a long time
+to load (as in a miute or so) on some browsers (namely firefox). It is
+best viewed in Google Chrome.
 
 =========================================================================
 
