--- a/README
+++ b/README
@@ -18,7 +18,7 @@ transformed to the desired projection.
 A live two dimensional orthographic projection example can be found at
 http://tlahoda.org/render2d.html A three dimensional WebGL example can be
 found at http://tlahoda.org . Be forewarned this demo may take a long time
-to load (as in a miute or so) on some browsers (namely firefox). It is
+to load (as in a minute or so) on some browsers (namely firefox). It is
 best viewed in Google Chrome.
 
 =========================================================================
